--- a/css/media.css
+++ b/css/media.css
@@ -4,7 +4,7 @@
     }
 
     .wrapper{
-        /* position: relative; */
+        position: relative;
         background-attachment: scroll; 
     }
 
